query params fix
