# docs/swagger.json
@@ -32,7 +32,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/vk_test_task_internal_api_models.CreateActorParams"
+                            "$ref": "#/definitions/api_models.CreateActorParams"
                         }
                     }
                 ],
@@ -40,7 +40,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/vk_test_task_internal_api_models.CreateActorParams"
+                            "$ref": "#/definitions/api_models.CreateActorParams"
                         }
                     }
                 }
@@ -68,7 +68,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/vk_test_task_internal_api_models.DeleteActorParams"
+                            "$ref": "#/definitions/api_models.DeleteActorParams"
                         }
                     }
                 ],
@@ -123,7 +123,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/vk_test_task_internal_api_models.UpdateActorParams"
+                            "$ref": "#/definitions/api_models.UpdateActorParams"
                         }
                     }
                 ],
@@ -159,7 +159,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/vk_test_task_internal_api_models.CreateFilmParams"
+                            "$ref": "#/definitions/api_models.CreateFilmParams"
                         }
                     }
                 ],
@@ -167,7 +167,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/vk_test_task_internal_api_models.CreateFilmParams"
+                            "$ref": "#/definitions/api_models.CreateFilmParams"
                         }
                     }
                 }
@@ -195,7 +195,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/vk_test_task_internal_api_models.DeleteFilmParams"
+                            "$ref": "#/definitions/api_models.DeleteFilmParams"
                         }
                     }
                 ],
@@ -206,7 +206,7 @@
                 }
             }
         },
-        "/film/get{sort_by}{asc}": {
+        "/film/get": {
             "get": {
                 "security": [
                     {
@@ -214,9 +214,6 @@
                     }
                 ],
                 "description": "return all films with their actors",
-                "consumes": [
-                    "application/json"
-                ],
                 "produces": [
                     "application/json"
                 ],
@@ -227,15 +224,15 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "sort column [В сваггере не настроены квери параметры, не нашел документации. Сортировка идеально работает через постман или инсомнию. Спасибо за понимание.]",
+                        "description": "sort column",
                         "name": "sort_by",
-                        "in": "path"
+                        "in": "query"
                     },
                     {
                         "type": "string",
                         "description": "sort asc",
                         "name": "asc",
-                        "in": "path"
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -245,7 +242,7 @@
                 }
             }
         },
-        "/film/search{name}{actor_name}": {
+        "/film/search": {
             "get": {
                 "security": [
                     {
@@ -263,15 +260,15 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "film name fragment [опять же, тут не настроены квери параметры, через апишницы все работает как миленькое.]",
+                        "description": "film name fragment",
                         "name": "name",
-                        "in": "path"
+                        "in": "query"
                     },
                     {
                         "type": "string",
                         "description": "actor name fragment",
                         "name": "actor_name",
-                        "in": "path"
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -303,7 +300,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/vk_test_task_internal_api_models.UpdateFilmParams"
+                            "$ref": "#/definitions/api_models.UpdateFilmParams"
                         }
                     }
                 ],
@@ -334,7 +331,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/vk_test_task_internal_api_models.AuthParams"
+                            "$ref": "#/definitions/api_models.AuthParams"
                         }
                     }
                 ],
@@ -342,7 +339,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/vk_test_task_internal_api_models.SignInUseCaseResponse"
+                            "$ref": "#/definitions/api_models.SignInUseCaseResponse"
                         }
                     }
                 }
@@ -365,7 +362,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/vk_test_task_internal_api_models.AuthParams"
+                            "$ref": "#/definitions/api_models.AuthParams"
                         }
                     }
                 ],
@@ -378,7 +375,7 @@
         }
     },
     "definitions": {
-        "vk_test_task_internal_api_models.AuthParams": {
+        "api_models.AuthParams": {
             "type": "object",
             "properties": {
                 "login": {
@@ -389,7 +386,7 @@
                 }
             }
         },
-        "vk_test_task_internal_api_models.CreateActorParams": {
+        "api_models.CreateActorParams": {
             "type": "object",
             "properties": {
                 "actor_id": {
@@ -406,7 +403,7 @@
                 }
             }
         },
-        "vk_test_task_internal_api_models.CreateFilmParams": {
+        "api_models.CreateFilmParams": {
             "type": "object",
             "properties": {
                 "actors": {
@@ -432,7 +429,7 @@
                 }
             }
         },
-        "vk_test_task_internal_api_models.DeleteActorParams": {
+        "api_models.DeleteActorParams": {
             "type": "object",
             "properties": {
                 "actor_id": {
@@ -440,7 +437,7 @@
                 }
             }
         },
-        "vk_test_task_internal_api_models.DeleteFilmParams": {
+        "api_models.DeleteFilmParams": {
             "type": "object",
             "properties": {
                 "film_id": {
@@ -448,7 +445,7 @@
                 }
             }
         },
-        "vk_test_task_internal_api_models.SignInUseCaseResponse": {
+        "api_models.SignInUseCaseResponse": {
             "type": "object",
             "properties": {
                 "access_token": {
@@ -462,7 +459,7 @@
                 }
             }
         },
-        "vk_test_task_internal_api_models.UpdateActorParams": {
+        "api_models.UpdateActorParams": {
             "type": "object",
             "properties": {
                 "actor_id": {
@@ -479,7 +476,7 @@
                 }
             }
         },
-        "vk_test_task_internal_api_models.UpdateFilmParams": {
+        "api_models.UpdateFilmParams": {
             "type": "object",
             "properties": {
                 "actors": {
